remade sam and greta stories

--- a/stories/samandgreta.html
+++ b/stories/samandgreta.html
@@ -5,27 +5,37 @@
         <title>sam and greta</title>
         <link rel="icon" href="../favicon.png">
         <link rel="stylesheet" href="../style.css">
+
+        <script>
+            function go() {
+                window.location.href = "pdfs/sam&greta/samandgreta.pdf";
+            }
+        </script>
     </head>
     <body>
         <main>
             <nav id="navbar">
                 <ul>
-                    <a class="navlink" href="../index.html">home</a> -
-                    <a class="navlink" href="https://soundcloud.com/ph3b3">music</a> -
-                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a> -
-                    <a class="stories" href="../stories.html">stories</a>
+                    <a href="../index.html">home</a>
+                    <a href="https://soundcloud.com/ph3b3">music</a>
+                    <a href="https://github.com/phoebe-leong/?tab=repositories">github</a>
+                    <a href="../stories.html">stories</a>
                 </ul>
             </nav><br><br><br><br><br>
             <h2>
                 Sam and Greta
             </h2>
             <p>
-                Two 13 year olds, one French and one German, are fighting in the Battle of France in World War Two when they<br>
+                Two thirteen year olds, one French and one German, are fighting in the Battle of France during World War Two when they<br>
                 miraculously find each other when the German is captured as a POW.<br>
                 Genre: Romance<br><br>
-                <a href="pdfs/samandgreta.pdf">
+
+                <button onclick = "go()">
+                    Read Book 1
+                </button>
+                <a href="pdfs/sam&greta/thebritisharmy.pdf">
                     <button>
-                        Read
+                        Read Book 2
                     </button>
                 </a>
             </p>
