--- a/mobile/index.html
+++ b/mobile/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="madewith.js"></script>
+        <script src="../madewith.js"></script>
         <link rel="stylesheet" href="style.css">
         <title>ph3b3</title>
     </head>
