remove useless files

--- a/mobile/stories/redpandawithbrownhair.html
+++ b/mobile/stories/redpandawithbrownhair.html
@@ -5,7 +5,7 @@
         <title>red panda with brown hair</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="icon" href="../favicon.png">
+        <link rel="icon" href="../../favicon.png">
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
@@ -24,7 +24,7 @@
             <p>
             A 14 year old girl has a crush on a 16 year old girl at her school and wants to ask her a few questions about life, the universe, and everything. But first she has to come out of the bushes<br>
             Genre: Romance</p>
-            <a href="pdfs/redpandawithbrownhair.pdf">
+            <a href="../../stories/pdfs/redpandawithbrownhair.pdf">
                 <button>
                     Read
                 </button>
