--- a/mobile/stories/samandgreta.html
+++ b/mobile/stories/samandgreta.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>sam and greta</title>
-        <link rel="icon" href="../favicon.png">
+        <link rel="icon" href="../../favicon.png">
         <link rel="stylesheet" href="../style.css">
 
         <script>
@@ -33,7 +33,7 @@
                 <button onclick = "go()">
                     Read Book 1
                 </button>
-                <a href="pdfs/sam&greta/thebritisharmy.pdf">
+                <a href="../../stories/pdfs/sam&greta/thebritisharmy.pdf">
                     <button>
                         Read Book 2
                     </button>
