--- a/mobile/stories/theinvisiblegirl.html
+++ b/mobile/stories/theinvisiblegirl.html
@@ -5,7 +5,7 @@
         <title>the invisible girl</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="icon" href="../favicon.png">
+        <link rel="icon" href="../../favicon.png">
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
@@ -24,7 +24,7 @@
             <p>
                 Read this gentle understanding story about the "invisible" Phoebe and her developing friendship and love<br>
                 Genre: Romance<br><br>
-                <a href="pdfs/theinvisiblegirl.pdf">
+                <a href="../../stories/pdfs/theinvisiblegirl.pdf">
                     <button>
                         Read
                     </button>
