--- a/mobile/stories.html
+++ b/mobile/stories.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="favicon.png">
+        <link rel="icon" href="../favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="style.css">
