--- a/mobile/stories/destructionofearth.html
+++ b/mobile/stories/destructionofearth.html
@@ -5,7 +5,7 @@
         <title>destruction of earth as we know it</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="icon" href="../favicon.png">
+        <link rel="icon" href="../../favicon.png">
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
@@ -25,7 +25,7 @@
                 Follow two university students as the attempt to save the world by making a time machine<br>
                 Genre: Science Fiction<br><br>
 
-                <a href="pdfs/thedestructionofearth.pdf">
+                <a href="../../stories/pdfs/thedestructionofearth.pdf">
                     <button>
                         Read
                     </button>
