--- a/mobile/stories/theknifewithagirl.html
+++ b/mobile/stories/theknifewithagirl.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>the knife with a girl</title>
-        <link rel="icon" href="../favicon.png">
+        <link rel="icon" href="../../favicon.png">
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
@@ -23,7 +23,7 @@
                 Follow the story of a young girl trying to get along in life while commiting<br>what appears to be random mass-murders<br>
                 Genre: Fiction<br><br>
 
-                <a href="pdfs/theknifewithagirl.pdf">
+                <a href="../../stories/pdfs/theknifewithagirl.pdf">
                     <button>
                         Read
                     </button>
