--- a/404.html
+++ b/404.html
@@ -15,19 +15,13 @@
     </head>
     <body>
         <main>
-            <nav id="navbar">
-                <ul>
-                    <a href="index.html">home</a>
-                    <a href="https://soundcloud.com/ph3b3">music</a>
-                    <a href="https://github.com/ph3b3/?tab=repositories">github</a>
-                    <a href="stories.html">stories</a>
-                </ul>
-            </nav><br><br><br><br><br>
+            <br><br><br><br><br>
             <center>
                 <h1>
                     404
                 </h1>
-                <p>( page not found )</p>
+                <p>< page not found /></p><br>
+                <button onclick="window.history.back()">Go back</button>
             </center>
         </main>
     </body>
