--- a/stories.html
+++ b/stories.html
@@ -18,10 +18,10 @@
             </nav><br><br><br><br><br>
             <h2>Stories</h2>
             <ul>
-                <a href="stories/samandgreta.html">sam and greta</a><br>
-                <a href="stories/redpandawithbrownhair.html">the red panda with brown hair</a><br>
-                <a href="stories/theinvisiblegirl.html">the invisible girl</a><br>
-                <a href="stories/destructionofearth.html">the destruction of earth as we know it</a><br>
+                <a href="stories/samandgreta.html">sam and greta</a><br><br>
+                <a href="stories/redpandawithbrownhair.html">the red panda with brown hair</a><br><br>
+                <a href="stories/theinvisiblegirl.html">the invisible girl</a><br><br>
+                <a href="stories/destructionofearth.html">the destruction of earth as we know it</a><br><br>
                 <a href="stories/theknifewithagirl.html">the knife with a girl</a>
             </ul>
         </main>
