--- a/mobile/index.html
+++ b/mobile/index.html
@@ -48,7 +48,7 @@
             Ph3be would later visit the language in high school, but at the time she didn't know that.<br><br>
             
             She first started as a musician in 2015 when she started learning the drums.<br>
-            Then, in 2020, she launched he SoundCloud account and begun posting on it.<br>
+            Then, in 2020, she launched her SoundCloud account and begun posting on it.<br>
             In 2021 she posted frequently.<br><br>
         
             She plans to get a computer science degree at the University of Sydney and hopefully post more consistently on her SoundCloud.</p>
