--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <meta property="description" content="ph3b3 : web designer, developer, musician">
         <meta name="keywords" content="ph3b3">
 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <script src="detectmobilebrowser.js"></script>
         <link rel="stylesheet" href="style.css">
         <title>ph3b3</title>
