--- a/stories.html
+++ b/stories.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <link rel="icon" href="favicon.png">
         <link rel="stylesheet" href="style.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>stories</title>
     </head>
     <body>
