--- a/mobile/index.html
+++ b/mobile/index.html
@@ -44,28 +44,33 @@
                 <br><br><br><br><br><br><br><br><br><br>
             </noscript>
 
-            <br><br><br><br>
+            <br>
             <p>Ph3b3 first started learning HTML and CSS around 2018, when she was in year 5.<br>
             The first real programming language she (half) learnt was C++, when she decided to make a program for her crush. It failed.<br>
-            Ph3be would later visit the language in high school, but at the time she didn't know that.<br><br>
+            Ph3be would later revisit the language in high school, but at the time she didn't know that.<br><br>
             
             She first started as a musician in 2015 when she started learning the drums.<br>
             Then, in 2020, she launched her SoundCloud account and begun posting on it.<br>
             In 2021 she posted frequently.<br><br>
         
             She plans to get a computer science degree at the University of Sydney and hopefully post more consistently on her SoundCloud.</p>
-            <br><br><br><br>
+            <br><br>
 
             <section>
                 <h2>General information about Ph3b3</h2>
                 <ul>
-                    <li class="info">Name: Phoebe/Darius</li><br>
+                    <li class="info">Alias: Ph3b3 (Phoebe)</li><br>
+                    <li class="info">Name: Darius</li><br>
                     <li class="info" id="age"></li><br>
                     <li class="info">Lives: Sydney, Australia</li><br>
-                    <li class="info">Languages learnt: HTML, CSS, C++</li><br>
+                    <li class="info">Programming Languages learnt: HTML, CSS, C++</li><br>
                     <li class="info">Musical Instruments learnt: Drums/Percussion, Singing</li><br><br>
                 </ul>
             </section>
+
+            <footer>
+                <p>Copyright &copy; Darius Leong</p>
+            </footer>
         </main>
     </body>
 </html>
