--- a/stories.html
+++ b/stories.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>stories</title>
+        <title>ph3b3 - stories</title>
     </head>
     <body>
         <main>
