--- a/mobile/index.html
+++ b/mobile/index.html
@@ -7,24 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <title>ph3b3</title>
 
-        <script>
-            const date = new Date();
-            function getAge()
-            {
-                // Minus 2021 (the year this code was written) from the current year and plus that result to 14 (how old phebe is/was in 2021) to get phebe's current age
-                const age = 14 + (2021 - date.getUTCFullYear())
-
-                // If the year is not 2021 (the year this code was written) and September 26th (phebe's birthday) has not passed, minus phebe's age by one and return that value
-                if (date.getUTCFullYear() != 2021 && date.getUTCMonth() < 9 && date.getUTCDay() < 26) return age - 1;
-                return age;
-            }
-
-            // Sets phebe's age on the "General information about ph3b3" section
-            window.onload = function()
-            {
-                document.getElementById("age").innerHTML = "Age: " + getAge();
-            }
-        </script>
+        <script src="../birthday.js"></script>
     </head>
     <body>
         <main>
