removed unused classes

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <script src="detectmobilebrowser.js"></script>
+        <script src="birthday.js"></script>
+
         <link rel="stylesheet" href="style.css">
         <title>ph3b3</title>
-
-        <script src="birthday.js"></script>
     </head>
     <body>
         <nav id="navbar">
             <ul>
-                <a class="navlink" href="index.html">home</a>
-                <a class="navlink" href="https://soundcloud.com/ph3b3">music</a>
-                <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a>
-                <a class="navlink" href="stories.html">stories</a>
+                <a href="index.html">home</a>
+                <a href="https://soundcloud.com/ph3b3">music</a>
+                <a href="https://github.com/phoebe-leong/?tab=repositories">github</a>
+                <a href="stories.html">stories</a>
             </ul>
         </nav><br>
 
@@ -49,12 +49,12 @@
             <section>
                 <h2>General information about Ph3b3</h2>
                 <ul>
-                    <li class="info">Alias: Ph3b3 (Phoebe)</li><br>
-                    <li class="info">Name: Darius</li><br>
-                    <li class="info" id="age"></li><br>
-                    <li class="info">Lives: Sydney, Australia</li><br>
-                    <li class="info">Programming Languages learnt: HTML, CSS, C++</li><br>
-                    <li class="info">Musical Instruments learnt: Drums/Percussion, Singing</li><br>
+                    <li>Alias: Ph3b3 (Phoebe)</li><br>
+                    <li>Name: Darius</li><br>
+                    <li id="age"></li><br>
+                    <li>Lives: Sydney, Australia</li><br>
+                    <li>Programming Languages learnt: HTML, CSS, C++</li><br>
+                    <li>Musical Instruments learnt: Drums/Percussion, Singing</li><br>
                 </ul>
             </section>
 
