--- a/mobile/index.html
+++ b/mobile/index.html
@@ -13,10 +13,10 @@
         <main>
             <nav class="navbar">
                 <ul>
-                    <a class="navlink" href="index.html">home</a><br>
-                    <a class="navlink" href="https://soundcloud.com/ph3b3">music</a><br>
-                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
-                    <a class="navlink" href="stories.html">stories</a>
+                    <a href="index.html">home</a><br>
+                    <a href="https://soundcloud.com/ph3b3">music</a><br>
+                    <a href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
+                    <a href="stories.html">stories</a>
                 </ul>
             </nav><br>
             
@@ -42,12 +42,12 @@
             <section>
                 <h2>General information about Ph3b3</h2>
                 <ul>
-                    <li class="info">Alias: Ph3b3 (Phoebe)</li><br>
-                    <li class="info">Name: Darius</li><br>
-                    <li class="info" id="age"></li><br>
-                    <li class="info">Lives: Sydney, Australia</li><br>
-                    <li class="info">Programming Languages learnt: HTML, CSS, C++</li><br>
-                    <li class="info">Musical Instruments learnt: Drums/Percussion, Singing</li><br><br>
+                    <li>Alias: Ph3b3 (Phoebe)</li><br>
+                    <li>Name: Darius</li><br>
+                    <li id="age"></li><br>
+                    <li>Lives: Sydney, Australia</li><br>
+                    <li>Programming Languages learnt: HTML, CSS, C++</li><br>
+                    <li>Musical Instruments learnt: Drums/Percussion, Singing</li><br><br>
                 </ul>
             </section>
 
