remove unneccessary nav classes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <title>ph3b3</title>
     </head>
     <body>
-        <nav id="navbar">
+        <nav>
             <ul>
                 <a href="index.html">home</a>
                 <a href="https://soundcloud.com/ph3b3">music</a>
