--- a/mobile/index.html
+++ b/mobile/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <main>
-            <nav class="navbar">
+            <nav>
                 <ul>
                     <a href="index.html">home</a><br>
                     <a href="https://soundcloud.com/ph3b3">music</a><br>
