more removal of unneccessary classes etc

--- a/mobile/stories.html
+++ b/mobile/stories.html
@@ -10,12 +10,12 @@
     </head>
     <body>
         <main>
-            <nav id="navbar">
+            <nav>
                 <ul>
-                    <a class="navlink" href="index.html">home</a><br>
-                    <a class="navlink" href="https://soundcloud.com/ph3b3">music</a><br>
-                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
-                    <a class="navlink" href="stories.html">stories</a>
+                    <a href="index.html">home</a><br>
+                    <a href="https://soundcloud.com/ph3b3">music</a><br>
+                    <a href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
+                    <a href="stories.html">stories</a>
                 </ul>
             </nav><br><br><br><br><br>
             <h2>Stories</h2>
