--- a/mobile/stories/theknifewithagirl.html
+++ b/mobile/stories/theknifewithagirl.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <main>
-            <nav id="navbar">
+            <nav>
                 <ul>
                     <a href="../index.html">home</a><br>
                     <a href="https://soundcloud.com/ph3b3">music</a><br>
