--- a/stories/theinvisiblegirl.html
+++ b/stories/theinvisiblegirl.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <main>
-            <nav id="navbar">
+            <nav>
                 <ul>
                     <a class="navlink" href="../index.html">home</a>
                     <a class="navlink" href="https://soundcloud.com/ph3b3">music</a>
