--- a/mobile/stories/theinvisiblegirl.html
+++ b/mobile/stories/theinvisiblegirl.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <main>
-            <nav id="navbar">
+            <nav>
                 <ul>
                     <a class="navlink" href="../index.html">home</a><br>
                     <a class="navlink" href="https://soundcloud.com/ph3b3">music</a><br>
