--- a/mobile/404.html
+++ b/mobile/404.html
@@ -16,7 +16,7 @@
                     404
                 </h1>
                 <p>< page not found /></p><br>
-                <button onclick="window.history.back()">Go back</button>
+                <button onclick="window.history.back()">Back</button>
             </center>
         </main>
     </body>
