--- a/mobile/stories/samandgreta.html
+++ b/mobile/stories/samandgreta.html
@@ -19,6 +19,7 @@
                     <a href="../index.html">home</a><br>
                     <a href="https://soundcloud.com/ph3b3">music</a><br>
                     <a href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
+                    <a href="https://ph3b3.carrd.co/">socials</a><br>
                     <a href="../stories.html">stories</a>
                 </ul>
             </nav><br><br><br><br><br>
