--- a/mobile/stories/theinvisiblegirl.html
+++ b/mobile/stories/theinvisiblegirl.html
@@ -15,6 +15,7 @@
                     <a class="navlink" href="../index.html">home</a><br>
                     <a class="navlink" href="https://soundcloud.com/ph3b3">music</a><br>
                     <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
+                    <a href="https://ph3b3.carrd.co/">socials</a><br>
                     <a class="navlink" href="../stories.html">stories</a>
                 </ul>
             </nav><br><br><br><br><br>
