--- a/stories/theknifewithagirl.html
+++ b/stories/theknifewithagirl.html
@@ -13,6 +13,7 @@
                     <a href="../index.html">home</a>
                     <a href="https://soundcloud.com/ph3b3">music</a>
                     <a href="https://github.com/phoebe-leong/?tab=repositories">github</a>
+                    <a href="https://ph3b3.carrd.co/">socials</a>
                     <a href="../stories.html">stories</a>
                 </ul>
             </nav><br><br><br><br><br>
