added light theme

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="theme-dark">
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="favicon.png">
@@ -14,6 +14,14 @@
 
         <script src="detectmobilebrowser.js"></script>
         <script src="birthday.js"></script>
+        <script src="theme.js"></script>
+
+        <script>
+            window.onload = function() {
+                setAge()
+                loadThemes()
+            }
+        </script>
 
         <link rel="stylesheet" href="style.css">
         <title>ph3b3</title>
@@ -22,10 +30,12 @@
         <nav>
             <ul>
                 <a href="index.html">home</a>
-                <a href="https://soundcloud.com/ph3b3">music</a>
-                <a href="https://github.com/phoebe-leong/?tab=repositories">github</a>
-                <a href="https://ph3b3.carrd.co/">socials</a>
+                <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
+                <a href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
+                <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
                 <a href="stories.html">stories</a>
+
+                <a id="theme-button" onclick="toggle()">change theme</a>
             </ul>
         </nav><br>
 
