--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="theme-dark">
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="../favicon.png">
@@ -8,12 +8,22 @@
         <title>ph3b3</title>
 
         <script src="../birthday.js"></script>
+        <script src="../theme.js"></script>
+        <script>
+            window.onload = function() {
+                setAge()
+                loadThemes()
+            }
+        </script>
     </head>
     <body>
         <main>
             <nav>
                 <ul>
-                    <a href="index.html">home</a><br>
+                    <a href="index.html">home</a>
+
+                    <a id="theme-button" onclick="toggle()">change theme</a><br>
+
                     <a href="https://soundcloud.com/ph3b3">music</a><br>
                     <a href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
                     <a href="https://ph3b3.carrd.co/">socials</a><br>
