--- a/stories.html
+++ b/stories.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html id="theme-dark">
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="favicon.png">
         <link rel="stylesheet" href="style.css">
+
+        <script src="theme.js"></script>
+        <script>
+            window.onload = function() {
+                loadThemes()
+            }
+        </script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ph3b3 - stories</title>
@@ -13,10 +20,12 @@
             <nav id="navbar">
                 <ul>
                     <a href="index.html">home</a>
-                    <a href="https://soundcloud.com/ph3b3">music</a>
-                    <a href="https://github.com/phoebe-leong/?tab=repositories">github</a>
-                    <a href="https://ph3b3.carrd.co/">socials</a>
+                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
+                    <a href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
+                    <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
                     <a href="stories.html">stories</a>
+
+                    <a id="theme-button" onclick="toggle()">change theme</a>
                 </ul>
             </nav><br><br><br><br><br>
             <h2>Stories</h2>
