--- a/stories/samandgreta.html
+++ b/stories/samandgreta.html
@@ -6,9 +6,14 @@
         <link rel="icon" href="../favicon.png">
         <link rel="stylesheet" href="../style.css">
 
+        <script src="../theme.js"></script>
         <script>
             function go() {
                 window.location.href = "pdfs/sam&greta/samandgreta.pdf";
+            }
+
+            window.onload = function() {
+                loadThemes()
             }
         </script>
     </head>
