--- a/mobile/stories.html
+++ b/mobile/stories.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html id="theme-dark">
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="../favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="style.css">
+
+        <script src="../theme.js"></script>
+        <script>
+            window.onload = function() {
+                loadThemes()
+            }
+        </script>
         <title>ph3b3 - stories</title>
     </head>
     <body>
         <main>
             <nav>
                 <ul>
-                    <a href="index.html">home</a><br>
+                    <a href="index.html">home</a>
+
+                    <a id="theme-button" onclick="toggle()">change theme</a><br>
+
                     <a href="https://soundcloud.com/ph3b3">music</a><br>
                     <a href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
                     <a href="https://ph3b3.carrd.co/">socials</a><br>
