--- a/mobile/stories/samandgreta.html
+++ b/mobile/stories/samandgreta.html
@@ -2,13 +2,20 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <title>sam and greta</title>
         <link rel="icon" href="../../favicon.png">
         <link rel="stylesheet" href="../style.css">
 
+        <script src="../../theme.js"></script>
         <script>
             function go() {
                 window.location.href = "pdfs/sam&greta/samandgreta.pdf";
+            }
+
+            window.onload = function() {
+                loadThemes()
             }
         </script>
     </head>
@@ -16,7 +23,10 @@
         <main>
             <nav>
                 <ul>
-                    <a href="../index.html">home</a><br>
+                    <a href="../index.html">home</a>
+
+                    <a id="theme-button" onclick="toggle()">change theme</a><br>
+                    
                     <a href="https://soundcloud.com/ph3b3">music</a><br>
                     <a href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
                     <a href="https://ph3b3.carrd.co/">socials</a><br>
