--- a/stories/destructionofearth.html
+++ b/stories/destructionofearth.html
@@ -5,6 +5,13 @@
         <title>destruction of earth as we know it</title>
         <link rel="icon" href="../favicon.png">
         <link rel="stylesheet" href="../style.css">
+
+        <script src="../theme.js"></script>
+        <script>
+            window.onload = function() {
+                loadThemes()
+            }
+        </script>
     </head>
     <body>
         <main>
@@ -15,6 +22,8 @@
                     <a href="https://github.com/phoebe-leong/?tab=repositories">github</a>
                     <a href="https://ph3b3.carrd.co/">socials</a>
                     <a href="../stories.html">stories</a>
+
+                    <a id="theme-button" onclick="toggle()">change theme</a>
                 </ul>
             </nav><br><br><br><br><br>
             <h2>
