added theme toggle button to the sam&greta page

--- a/stories/samandgreta.html
+++ b/stories/samandgreta.html
@@ -26,6 +26,8 @@
                     <a href="https://github.com/phoebe-leong/?tab=repositories">github</a>
                     <a href="https://ph3b3.carrd.co/">socials</a>
                     <a href="../stories.html">stories</a>
+
+                    <a id="theme-button" onclick="toggle()">change theme</a>
                 </ul>
             </nav><br><br><br><br><br>
             <h2>
