all external links open in new tab

--- a/stories/samandgreta.html
+++ b/stories/samandgreta.html
@@ -22,9 +22,9 @@
             <nav>
                 <ul>
                     <a href="../index.html">home</a>
-                    <a href="https://soundcloud.com/ph3b3">music</a>
-                    <a href="https://github.com/phoebe-leong/?tab=repositories">github</a>
-                    <a href="https://ph3b3.carrd.co/">socials</a>
+                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
+                    <a href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
+                    <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
                     <a href="../stories.html">stories</a>
 
                     <a id="theme-button" onclick="toggle()">change theme</a>
