--- a/stories/theinvisiblegirl.html
+++ b/stories/theinvisiblegirl.html
@@ -18,9 +18,9 @@
             <nav>
                 <ul>
                     <a class="navlink" href="../index.html">home</a>
-                    <a class="navlink" href="https://soundcloud.com/ph3b3">music</a>
-                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a>
-                    <a href="https://ph3b3.carrd.co/">socials</a>
+                    <a class="navlink" href="https://soundcloud.com/ph3b3" target="_blank">music</a>
+                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
+                    <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
                     <a class="navlink" href="../stories.html">stories</a>
 
                     <a id="theme-button" onclick="toggle()">change theme</a>
