link goes back to home instead of index.html

--- a/stories.html
+++ b/stories.html
@@ -19,7 +19,7 @@
         <main>
             <nav id="navbar">
                 <ul>
-                    <a href="index.html">home</a>
+                    <a href="/">home</a>
                     <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
                     <a href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
                     <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
