remove university aspiration

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -45,9 +45,8 @@
             
             She first started as a musician in 2015 when she started learning the drums.<br>
             Then, in 2020, she launched her SoundCloud account and begun posting on it.<br>
-            In 2021 she posted frequently.<br><br>
-        
-            She plans to get a computer science degree at the University of Sydney and hopefully post more consistently on her SoundCloud.</p>
+            In 2021 she posted frequently and hopes to continue doing so in the future.<br><br>
+            </p>
             <br><br>
 
             <section>
