--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
         <meta name="keywords" content="ph3b3">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <!-- Hotjar Tracking Code for https://phoebe-leong.github.io/ -->
+        <script>
+            (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:2981667,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        </script>
 
         <script src="detectmobilebrowser.js"></script>
         <script src="birthday.js"></script>
